--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>jawamaster</groupId>
     <artifactId>JawaPermissions</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.5.10a</version>
     <packaging>jar</packaging>
     <repositories>
         <repository>
