Complete rewrite of Ban Command, Ban data updates, PlayerPreJoin. PlayerJoin and PlayerQuit now update player data on join and quit. Added new ArgumentParser, MessageParser, and TimeParser utilities.

--- a/src/main/resources/changelog.yml
+++ b/src/main/resources/changelog.yml
@@ -6,6 +6,9 @@ planned_features:
     - Update checking
     - Anticheat?
 ChangeLog:
+    0.6.0a:
+        new:
+            - Updating EShandler for 1.14
     0.6.0ax:
         new:
             - PlayerPreJoin event now deals with bans and data caching and will get rid of user if banned otherwise will allow connection and precache player data
