Changed plugin internal version to 1.0

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: JawaPermissions
 main: jawamaster.jawapermissions.JawaPermissions
-version: 0.6.0a
+version: 1.0
 commands:
   uuid:
     description: This command returns the UUID of a user.
