--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,3 +5,4 @@ default-world: world
 debug: false
 new-player-message: "You have been successfully Indexed"
 unsecured: true
+ban-appeal-suffix: "You can appeal at https://foxelbox.com"
