--- a/pom.xml
+++ b/pom.xml
@@ -23,16 +23,20 @@
             <version>1.16.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20190722</version>
+            <version>20201115</version>
         </dependency>
         <dependency>
             <groupId>net.jawasystems</groupId>
             <artifactId>JawaCore</artifactId>
             <version>1.16.X-1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.maxmind.geoip2</groupId>
+            <artifactId>geoip2</artifactId>
+            <version>2.15.0</version>
         </dependency>
     </dependencies>
     <properties>
