--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,3 +6,9 @@ debug: false
 new-player-message: "You have been successfully Indexed"
 unsecured: true
 ban-appeal-suffix: "You can appeal at https://foxelbox.com"
+ban-reason-length: 3
+unban-reason-length: 3
+geoip-database: GeoLite2-City.mmdb
+alt-notification:
+    enabled: false
+    minimum-immunity: 1
