Various in-process changes. Commit to prepare 1.18.X upgrade. 1.17.X is abandoned. This is a non-working commit.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,6 +8,7 @@ unsecured: true
 ban-appeal-suffix: "You can appeal at https://foxelbox.com"
 ban-reason-length: 3
 unban-reason-length: 3
+geoip-enabled: false
 geoip-database: GeoLite2-City.mmdb
 alt-notification:
     enabled: false
