--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,9 @@
 name: JawaPermissions
 main: jawamaster.jawapermissions.JawaPermissions
-description: A permissions and player manegment plugin using the ElasticSearch Database.
-version: 1.2
+version: ${pom.version}
+description: "A permissions and player manegment plugin using the ElasticSearch Database."
+author: Jawamaster (Arthur Bulin)
+api-version: 1.17
 commands:
   uuid:
     description: This command returns the UUID of a user.
