--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>jawamaster</groupId>
     <artifactId>JawaPermissions</artifactId>
-    <version>1.18.X-1.0</version>
+    <version>1.20.X-0.1</version>
     <packaging>jar</packaging>
     
     <build>
@@ -38,10 +38,9 @@
     
     <dependencies>
         <dependency>
-        <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.18.1-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
+            <groupId>io.papermc.paper</groupId>
+            <artifactId>paper-api</artifactId>
+            <version>1.20.4-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
@@ -51,7 +50,7 @@
         <dependency>
             <groupId>net.jawasystems</groupId>
             <artifactId>JawaCore</artifactId>
-            <version>1.18.X-1.0</version>
+            <version>1.20.X-0.1</version>
         </dependency>
         <dependency>
             <groupId>com.maxmind.geoip2</groupId>
